<?xml version="1.0" encoding="utf-8"?>

<resources>
	<string name="app_name">XReader</string>
	<string name="images">Images</string>
	<string name="video">Video</string>
	<string name="audio">Audio</string>
	<string name="documents">Documents</string>
	<string name="presentations">Presentations</string>
	<string name="favorites">Bookmarks</string>
	<string name="recents">Recents</string>
	<string name="downloads">Downloads</string>
	<string name="storage">Internal Storage</string>
	<string name="sdcard">SD Card</string>
	<string name="sdcards">SD Cards</string>
	<string name="others">others</string>
	
	<string name="search_menu_item_name">Search</string>
	<string name="sort_by_menu_item">Sort by</string>
	<string name="folder_name_menu_item">Folder Name</string>
	<string name="range_seek_bar_name"> File size</string>
	<string name="sorting_view_title">Sort by</string>
	
	<string name="table_of_contents">Table of Contents</string>
	<string name="table_of_contents_is_null">No Table of Contents</string>
	<string name="elements">Elements: %1$d</string>
	<string name="choose_font_size">Choose Font Size</string>
	<string name="selected_font_size_parameterized">Font Size: %1$d</string>
	<string name="explorer_title">Explorer</string>
	
	<string name="internal_storage">Internal Storage</string>
	
	//Dialogs
	<string name="choose_bookmark">Choose bookmark</string>
	<string name="add_bookmark">Add bookmark</string>
	<string name="bookmark">Bookmark</string>
	<string name="dialog_bookmark_added">Bookmark added!</string>
	<string name="bookmark_deleted">Bookmark deleted!</string>
	<string name="bookmark_page_index">Page: %1$d</string>
	<string name="add_bookmark_button">Add</string>
	<string name="dismiss">Dismiss</string>
	<string name="dialog_go_to">Go to page %1$d</string>
	<string name="dialog_go_to_title">Choose Page</string>
	<string name="dialog_button_go">Go</string>
	<string name="confirm_delete_title">Are you sure you want to delete the bookmark?</string>
	<string name="delete_button">Delete</string>
	
	<string name="dialog_sheets_title">Sheets</string>
	
	<string name="converter_file_size_warning_title">Warning!</string>
	<string name="converter_file_size_warning_text">To convert, you need an Internet connection.
		The size of the transferred file is %1$s.
		Are you sure you want to start the conversion?</string>
	
	<string name="chapter_page">Chapter: %1$d, Page: %2$d. </string>
	
	<string name="could_not_open_error_dialog_title">Could not open the file</string>
	
	<string name="no_recents">No Recents</string>
	<string name="no_bookmarks">No Bookmarks</string>
	
	//Tabs
	<string name="tab_name_bookmarks">Bookmarks</string>
	<string name="tab_name_explorer">File Explorer</string>
	<string name="tab_name_recent_files">Recent Files</string>
	
	//Menus
	<string name="menu_convert">Convert</string>
	<string name="menu_text_size">Text size</string>
	<string name="menu_night_mode">Night mode</string>
	<string name="menu_add_to_favorites">Add to Favorites</string>
	<string name="menu_bookmark">Add bookmark</string>
	<string name="menu_bookmark_added">Bookmark added!</string>
	<string name="menu_toc">Table of Contents</string>
	<string name="menu_share">Share</string>
	<string name="menu_forbid_rotations">Forbid Rotations</string>
	<string name="menu_allow_rotations">Allow Rotations</string>
	<string name="menu_intent_send_file_title">Share via…</string>
	<string name="menu_go_to">Go to…</string>
	<string name="menu_explorer_search">Search</string>
	<string name="menu_explorer_sort">Sort</string>
	<string name="menu_explorer_sort_by_name">By name</string>
	<string name="menu_explorer_sort_by_date">By date</string>
	<string name="menu_explorer_sort_by_extension">By extension</string>
	<string name="menu_explorer_sort_by_size">By size</string>
	
	<string-array name="sorting_types">
		<item>Name</item>
		<item>Date</item>
		<item>Extension</item>
		<item>Size</item>
	</string-array>
	
	<string name="converter_convert">Convert</string>
	<string name="converter_uploading">Uploading…</string>
	<string name="converter_converting">Converting…</string>
	<string name="converter_downloading">Downloading…</string>
	<string name="converter_success">Success!</string>
	<string name="converter_failure">Failure!</string>
	<string name="converter_internet_is_unavailable">Internet is unavailable</string>
	<string name="convert_to">Convert To:</string>
	<string name="convert_to_document_type">Document type:</string>
	<string name="convert_to_document_extension">Extension:</string>
	
	<string name="all">All</string>
	<string name="new_files">New files</string>
	<string name="archives">Archives</string>
	<string name="books">Books</string>
	
	<string name="tb">Tb</string>
	<string name="gb">Gb</string>
	<string name="mb">Mb</string>
	<string name="kb">Kb</string>
	<string name="choose">Choose</string>
	<string name="rename">Rename</string>
	<string name="save">Save</string>
	<string name="chapter">Chapter</string>
	<string name="page">Page</string>
	<string name="go">Go</string>
	<string name="permission_rationale">The app needs permission to access internal storage</string>
	<string name="ask_permission">Ask permission</string>
	<string name="attention">Attention</string>
	<string name="choose_app">Choose an application to open with:</string>
	<string name="conversion_not_completed">Conversion not completed</string>
	<string name="internet_required">Internet connection is necessary for the conversion</string>
	<string name="conversion_stage_started">Preparing…</string>
	<string name="conversion_stage_uploading">Uploading file…</string>
	<string name="conversion_stage_uploaded">Successfully uploaded</string>
	<string name="conversion_stage_converting">Converting</string>
	<string name="conversion_stage_converted">Converted</string>
	<string name="conversion_stage_downloading">Downloading…</string>
	<string name="conversion_stage_ready">Success!</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="new_name">New name</string>
	<string name="open_converted_file">Open converted file</string>
</resources>