<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019.
  ~ Created by Vladislav Zraevskij
  ~
  ~ This file is part of XReader.
  ~
  ~     XReader is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Lesser General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     XReader is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Lesser General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Lesser General Public License
  ~     along with XReader.  If not, see <https://www.gnu.org/licenses/lgpl-3.0.html>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/menu_table_book_go_to"
		android:title="@string/menu_go_to"
		android:icon="@drawable/ic_book_open_page_variant"
		app:showAsAction="ifRoom" />
	
	<item
		android:id="@+id/menu_table_book_add_bookmark"
		android:title="@string/add_bookmark"
		android:icon="@drawable/ic_bookmark_border_24px"
		app:showAsAction="ifRoom" />
	
	<item
		android:id="@+id/menu_table_book_convert"
		android:title="@string/menu_convert"
		android:icon="@drawable/ic_file_settings_variant_outline" />
	
	<item
		android:id="@+id/menu_table_book_share"
		android:title="@string/menu_share"
		android:icon="@drawable/ic_share_24px" />
	
	<item
		android:id="@+id/menu_table_book_forbid_rotations"
		android:title="@string/menu_forbid_rotations"
		android:icon="@drawable/ic_screen_lock_rotation_24px" />
</menu>