<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019.
  ~ Created by Vladislav Zraevskij
  ~
  ~ This file is part of XReader.
  ~
  ~     XReader is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Lesser General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     XReader is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Lesser General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Lesser General Public License
  ~     along with XReader.  If not, see <https://www.gnu.org/licenses/lgpl-3.0.html>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<!--	<item-->
	<!--		android:id="@+id/menu_explorer_search"-->
	<!--		android:icon="@drawable/ic_search"-->
	<!--		android:title="@string/menu_explorer_search"-->
	<!--		app:showAsAction="always|collapseActionView"-->
	<!--		app:actionViewClass="androidx.appcompat.widget.SearchView"/>-->
	
	<item
		android:id="@+id/menu_explorer_by_name"
		android:title="@string/menu_explorer_sort_by_name" />
	<item
		android:id="@+id/menu_explorer_by_date"
		android:title="@string/menu_explorer_sort_by_date" />
	<item
		android:id="@+id/menu_explorer_by_extension"
		android:title="@string/menu_explorer_sort_by_extension" />
	<item
		android:id="@+id/menu_explorer_by_size"
		android:title="@string/menu_explorer_sort_by_size" />
</menu>