<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019.
  ~ Created by Vladislav Zraevskij
  ~
  ~ This file is part of XReader.
  ~
  ~     XReader is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Lesser General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     XReader is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Lesser General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Lesser General Public License
  ~     along with XReader.  If not, see <https://www.gnu.org/licenses/lgpl-3.0.html>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/tab_recents"
		android:icon="@drawable/baseline_restore_24"
		android:title="@string/tab_name_recent_files" />
	<item
		android:id="@+id/tab_explorer"
		android:icon="@drawable/baseline_folder_open_24"
		android:title="@string/tab_name_explorer" />
	<item
		android:id="@+id/tab_favorites"
		android:icon="@drawable/ic_bookmark_border_24px"
		android:title="@string/tab_name_bookmarks" />
</menu>