<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/clConvertion"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<TextView
		android:id="@+id/tvSourceFile"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="32dp"
		android:layout_marginEnd="32dp"
		android:text="Source File.pdf"
		android:textAlignment="center"
		android:textSize="24dp"
		app:layout_constraintBottom_toTopOf="@+id/tvConvertTo"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<TextView
		android:id="@+id/tvConvertTo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/convert_to"
		app:layout_constraintBottom_toTopOf="@+id/btnConvert"
		app:layout_constraintEnd_toStartOf="@+id/btnChooseExtension"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintHorizontal_chainStyle="packed"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvSourceFile" />
	
	<Button
		android:id="@+id/btnChooseExtension"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:text="@string/choose"
		app:layout_constraintBottom_toBottomOf="@+id/tvConvertTo"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toEndOf="@+id/tvConvertTo"
		app:layout_constraintTop_toTopOf="@+id/tvConvertTo" />
	
	<Button
		android:id="@+id/btnConvert"
		android:layout_width="0dp"
		android:layout_height="56dp"
		android:layout_marginStart="32dp"
		android:layout_marginEnd="32dp"
		android:text="@string/converter_convert"
		app:layout_constraintBottom_toTopOf="@+id/pbConvertion"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvConvertTo" />
	
	<ProgressBar
		android:id="@+id/pbConvertion"
		style="?android:attr/progressBarStyle"
		android:layout_width="140dp"
		android:layout_height="140dp"
		app:layout_constraintBottom_toTopOf="@+id/tvConvertionStatus"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btnConvert" />
	
	<TextView
		android:id="@+id/tvConvertionStatus"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="24dp"
		app:layout_constraintBottom_toTopOf="@+id/btnOpenResult"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/pbConvertion"
		tools:text="@string/conversion_stage_ready" />
	
	<Button
		android:id="@+id/btnOpenResult"
		android:layout_width="0dp"
		android:layout_height="56dp"
		android:layout_marginStart="32dp"
		android:layout_marginEnd="32dp"
		android:text="@string/open_converted_file"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvConvertionStatus" />

</androidx.constraintlayout.widget.ConstraintLayout>