<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/clFirst"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<TextView
		android:id="@+id/tvRationale"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="32dp"
		android:layout_marginTop="32dp"
		android:layout_marginEnd="32dp"
		android:text="@string/permission_rationale"
		android:textAlignment="center"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/btnAskPermission"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<Button
		android:id="@+id/btnAskPermission"
		android:layout_width="0dp"
		android:layout_height="64dp"
		android:layout_marginStart="64dp"
		android:layout_marginEnd="64dp"
		android:text="@string/ask_permission"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvRationale" />
	
	<Button
		android:id="@+id/btnPrivacyPolicy"
		android:layout_width="0dp"
		android:layout_height="64dp"
		android:layout_marginTop="16dp"
		android:text="@string/privacy_policy"
		app:layout_constraintEnd_toEndOf="@+id/btnAskPermission"
		app:layout_constraintStart_toStartOf="@+id/btnAskPermission"
		app:layout_constraintTop_toBottomOf="@+id/btnAskPermission" />
</androidx.constraintlayout.widget.ConstraintLayout>